# lidar_mars_registration

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  package.xml  setup.py
cmake/: FindEasyPBR.cmake
config/: drz.cfg  drz_benchmark_10hz.cfg  live.cfg  newer_college_ext.cfg  oxford.cfg  urban_loco.cfg  urban_loco_ca.cfg  urban_loco_hk.cfg  urban_loco_hk0.cfg
data/: mapillary_color_scheme.txt  mapillary_labels.txt  semantic_kitti_color_scheme_compacted_colors.txt  semantic_kitti_frequency.txt  semantic_kitti_labels.txt
include/: BagAdaptor.h  BagReader.h  BagReaderImpl.h  CloudTransform.h  EasyPBRwrapper.h  EigenFwdDec.h  Icosahedron.h  MarsAssociations.h  MarsAssociator.h  MarsBlockSparseVoxelGrid.h  MarsCell.h  MarsDenseVoxelGrid.h  MarsFwdDec.h  MarsMap.h  MarsMapParameters.h  MarsMapWindow.h  MarsPermutohedralLattice.h  MarsPointTypes.h  MarsSemanticClass.h  MarsSparseVoxelGrid.h  MarsSplineRegistration.h  MarsSplineRegistrationAdaptor.h  MarsSplineRegistrator.h  MarsSurfel.h  MarsSurfelInfo.h  PyBridge.h  StopWatch.h  VisUtils.h  sophusToTf.h
include/basalt/imu/: imu_types.h  preintegration.h
include/basalt/optimization/: accumulator.h
include/basalt/spline/: ceres_local_param.hpp  ceres_spline_helper.h  rd_spline.h  se3_spline.h  so3_spline.h
include/basalt/utils/: eigen_utils.hpp  sophus_utils.hpp
launch/: drz_ouster_128_eval.launch  laser_odometry.launch  lidar_mars_odometry.launch  nc_ouster_64_eval.launch  nce_ouster_128_eval.launch
python/: registration.py
src/: BagAdaptor.cxx  BagReader.cxx  EasyPBRwrapper.cxx  MarsAssociator.cxx  MarsBlockSparseVoxelGrid.cxx  MarsCell.cxx  MarsDenseVoxelGrid.cxx  MarsEvaluator.hpp  MarsInfoWeightor.hpp  MarsMap.cxx  MarsMapParameters.cxx  MarsMapWindow.cxx  MarsPermutohedralLattice.cxx  MarsPointTypes.cxx  MarsRegistration_Node.cxx  MarsRosNode.cxx  MarsSemanticClass.cxx  MarsSparseVoxelGrid.cxx  MarsSplineRegistration.cxx  MarsSplineRegistrationAdaptor.cxx  MarsSplineRegistrationOMP.hpp  MarsSplineRegistrator.cxx  MarsSurfel.cxx  MarsSurfelInfo.cxx  PyBridge.cxx  VisUtils.cxx  loguru.cpp  main.cxx
